# Virus_OpenCV_Game

./: CMakeLists.txt  README.md
src/: controller.cpp  controller.h  entity.cpp  entity.h  game  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  tracking.cpp  tracking.h
